--- a/docker/.env.example
+++ b/docker/.env.example
@@ -2,6 +2,7 @@
 # Common configuration.
 ################################################
 TZ=Asia/Shanghai
+DOCKER_REPO=ghcr.io/
 
 ################################################
 # Backend configuration.
