fix: update default model name

--- a/config/ai_engine_config.yaml
+++ b/config/ai_engine_config.yaml
@@ -21,7 +21,7 @@ app:
 
 # Model configurations
 models:
-  MiMo-VL-7B-SFT:Q4_0:
+  MiMo-VL-Miloco-7B:Q4_0:
     # Basic settings
     model_path: "/models/MiMo-VL-Miloco-7B/MiMo-VL-Miloco-7B_Q4_0.gguf" # Model path
     mmproj_path: "/models/MiMo-VL-Miloco-7B/mmproj-MiMo-VL-Miloco-7B_BF16.gguf" # VIT model path
@@ -67,6 +67,6 @@ server_concurrency:
   abandon_low_priority: true # Abandon low priority tasks when high priority tasks arrive
 
 # Automatic model configuration to optimization vram
-#[Only support default model: MiMo-VL-7B-SFT:Q4_0/Qwen3-8b:Q4_0]
+#[Only support default model: MiMo-VL-Miloco-7B:Q4_0/Qwen3-8b:Q4_0]
 #[May invalidate the following configurations: cache_seq_num/parallel_seq_num/total_context_num/context_per_seq/chunk_size]
 auto_opt_vram: true
