fix: update n_gpu_layers setup
1. 修改n_gpu_layers的赋值逻辑: 允许在device为MPS时, 保持为MAX_CUDA_LAYERS
2. 在macos上, 似乎C++库的导入顺序会导致引用失败, 于是提前导入了一下

--- a/miloco_ai_engine/core/CMakeLists.txt
+++ b/miloco_ai_engine/core/CMakeLists.txt
@@ -24,6 +24,14 @@ add_subdirectory(${LLAMA_THIRD_PARTY_PATH}/src  ${CMAKE_CURRENT_BINARY_DIR}/llam
 
 target_link_libraries(llama-mico PRIVATE llama ggml)
 
+# Set RPATH for macOS to find dependencies in the same directory
+if(APPLE)
+    set_target_properties(llama-mico PROPERTIES
+        INSTALL_RPATH "@loader_path"
+        BUILD_WITH_INSTALL_RPATH TRUE
+    )
+endif()
+
 add_subdirectory(utils)
 add_subdirectory(cache_manager)
 add_subdirectory(batch_scheduling)
