--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,9 +2,10 @@ name: Build Docker Images
 
 on:
   push:
-    branches: [main]
     tags:
-      - "*"
+      - "v*"
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -41,6 +42,12 @@ jobs:
           LOWERCASE_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           echo "LOWERCASE_OWNER=$LOWERCASE_OWNER" >> $GITHUB_OUTPUT
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push ai_engine
         uses: docker/build-push-action@v4
         with:
@@ -50,11 +57,12 @@ jobs:
           tags: |
             ghcr.io/${{ steps.lowercase.outputs.LOWERCASE_OWNER }}/miloco-ai_engine:${{ steps.vars.outputs.VERSION }}
 
-      - name: Build and push backend
+      - name: Build and push backend (multi-arch)
         uses: docker/build-push-action@v4
         with:
           context: .
           file: docker/backend.Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ steps.lowercase.outputs.LOWERCASE_OWNER }}/miloco-backend:${{ steps.vars.outputs.VERSION }}
