--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -7,14 +7,22 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      build-backend:
+        description: 'Build backend image'
+        type: boolean
+        default: true
+      build-ai-engine:
+        description: 'Build AI engine image'
+        type: boolean
+        default: true
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+    outputs:
+      version: ${{ steps.vars.outputs.VERSION }}
+      lowercase-owner: ${{ steps.lowercase.outputs.LOWERCASE_OWNER }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -44,6 +52,24 @@ jobs:
           LOWERCASE_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           echo "LOWERCASE_OWNER=$LOWERCASE_OWNER" >> $GITHUB_OUTPUT
 
+  build-ai-engine:
+    needs: setup
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.build-ai-engine || github.event_name != 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -57,7 +83,31 @@ jobs:
           file: docker/ai_engine.cuda.Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ steps.lowercase.outputs.LOWERCASE_OWNER }}/miloco-ai_engine:${{ steps.vars.outputs.VERSION }}
+            ghcr.io/${{ needs.setup.outputs.lowercase-owner }}/miloco-ai_engine:${{ needs.setup.outputs.version }}
+
+  build-backend:
+    needs: setup
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.build-backend || github.event_name != 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push backend (multi-arch)
         uses: docker/build-push-action@v4
@@ -67,4 +117,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ steps.lowercase.outputs.LOWERCASE_OWNER }}/miloco-backend:${{ steps.vars.outputs.VERSION }}
+            ghcr.io/${{ needs.setup.outputs.lowercase-owner }}/miloco-backend:${{ needs.setup.outputs.version }}
