--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,9 @@ $RECYCLE.BIN/
 
 # web ui build static files in miloco_server
 miloco_server/static/
+
+# AI
+.claude/
+openspec/
+AGENTS.md
+CLAUDE.md
