--- a/docker/docker-compose-lite.yaml
+++ b/docker/docker-compose-lite.yaml
@@ -14,11 +14,11 @@ services:
       - BACKEND_LOG_LEVEL=${BACKEND_LOG_LEVEL:-info}
       - TZ=${TZ:-Asia/Shanghai}
     volumes:
-      - ./data:/app/miloco_server/.temp
-      - ./log/backend:/app/miloco_server/.temp/log
+      - ../data:/app/miloco_server/.temp
+      - ../log/backend:/app/miloco_server/.temp/log
     # NOTICE: Mount configuration files, if you want to use your own configuration files, please mount them here.
-    #  - ./config/server_config.yaml:/app/config/server_config.yaml
-    #  - ./config/prompt_config.yaml:/app/config/prompt_config.yaml
+    #  - ../config/server_config.yaml:/app/config/server_config.yaml
+    #  - ../config/prompt_config.yaml:/app/config/prompt_config.yaml
     restart: unless-stopped
     healthcheck:
       disable: true
