refactor: 业务决定prompts，业务决定优先级, 把优先级的设置从prompts中抽出来, 放在了业务的配置部分. 此外, 在不需要优先级的业务, 不读取config

--- a/config/server_config.yaml
+++ b/config/server_config.yaml
@@ -53,11 +53,15 @@ trigger_rule_runner:
   interval_seconds: 2
   vision_use_img_count: 6
   trigger_rule_log_ttl: 30 #days
+  priority: 5  # Task priority for trigger rule condition checks
+
+# Vision understanding configuration
+vision_understanding:
+  priority: 10  # Task priority for vision understanding tasks
 
 # Camera configuration
 camera:
   frame_interval: 500 # Unit: Millisecond (ms)
-
 
 # MIoT configuration, default to 'cn', use your MiHome cloud server
   # 'cn': '中国大陆'
