--- a/miloco_server/pyproject.toml
+++ b/miloco_server/pyproject.toml
@@ -30,11 +30,11 @@ dependencies = [
     "aiocache>=0.12.0",
     "cachetools>=5.3.0",
     "croniter>=1.4.0",
-    "sqlalchemy>=1.4.42,<2.0.0",
-    "alembic>=1.12.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.25.0",
     "websockets>=12.0",
+    "mem0ai>=0.1.0",
+    "chromadb>=0.4.0",
 ]
 
 [project.optional-dependencies]
