--- a/config/server_config.yaml
+++ b/config/server_config.yaml
@@ -53,11 +53,11 @@ trigger_rule_runner:
   interval_seconds: 2
   vision_use_img_count: 6
   trigger_rule_log_ttl: 30 #days
-  priority: 5  # Task priority for trigger rule condition checks
+  priority: 5  # Task priority for trigger rule condition checks, middle priority
 
 # Vision understanding configuration
 vision_understanding:
-  priority: 10  # Task priority for vision understanding tasks
+  priority: 10  # Task priority for vision understanding tasks, highest priority
 
 # Camera configuration
 camera:
