--- a/config/server_config.yaml
+++ b/config/server_config.yaml
@@ -20,7 +20,7 @@ database:
 server:
   host: "0.0.0.0"
   port: 8000
-  log_level: "error"
+  log_level: "info"
   enable_console_logging: true
   enable_file_logging: true
 
